Fix cartItemPreview button issue on mobile

--- a/src/assets/styles/components/entities/cart/_cart-aside.scss
+++ b/src/assets/styles/components/entities/cart/_cart-aside.scss
@@ -5,7 +5,6 @@
 
   height: 100dvh;
   width: 400px;
-  max-width: 100%;
   background-color: #fff;
   color: black;
   box-shadow: -4px 0 8px rgba(0, 0, 0, 0.1);
@@ -53,6 +52,7 @@
     flex: 1;
     overflow-y: auto;
     padding: 1rem;
+    max-width: clamp(200px, 100%, 400px);
   }
 
   .cart-aside-footer {
